--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "core-js": "^2.6.5",
     "d3": "^5.12.0",
     "leaflet": "^1.6.0",
+    "plotly": "^1.0.6",
     "vue": "^2.6.10",
     "vue-context-menu": "^2.0.6",
+    "vue-plotly": "^1.1.0",
     "vue-simple-context-menu": "^3.1.7",
     "vuejs-toggle-switch": "^1.3.0",
     "vuelayers": "^0.11.17"
